News UAT/force-app/main/default/objects/FiscalCalendar__mdt/FiscalCalendar__mdt.object-meta.xml
<CustomObject>
    <label>NewsCorp Fiscal Calendar</label>
    <pluralLabel>NewsCorp Fiscal Calendars</pluralLabel>
</CustomObject>