News UAT/force-app/main/default/objects/FiscalCalendar__mdt/fields/DT_ID__c.field-meta.xml
<CustomField>
    <fullName>DT_ID__c</fullName>
    <label>DT ID</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>