News UAT/force-app/main/default/objects/FiscalCalendar__mdt/fields/FISC_DOY_NR__c.field-meta.xml
<CustomField>
    <fullName>FISC_DOY_NR__c</fullName>
    <label>FISC DOY NR</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>