News UAT/force-app/main/default/objects/FiscalCalendar__mdt/fields/FISC_HFYR_NM__c.field-meta.xml
<CustomField>
    <fullName>FISC_HFYR_NM__c</fullName>
    <label>FISC HFYR NM</label>
    <length>20</length>
    <type>Text</type>
</CustomField>