News UAT/force-app/main/default/objects/FiscalCalendar__mdt/fields/FISC_HFYR_NR__c.field-meta.xml
<CustomField>
    <fullName>FISC_HFYR_NR__c</fullName>
    <label>FISC HFYR NR</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>