News UAT/force-app/main/default/objects/FiscalCalendar__mdt/fields/FISC_MNTH_SNAM__c.field-meta.xml
<CustomField>
    <fullName>FISC_MNTH_SNAM__c</fullName>
    <label>FISC MNTH SNAM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>