News UAT/force-app/main/default/objects/FiscalCalendar__mdt/fields/FISC_QRTR_NM__c.field-meta.xml
<CustomField>
    <fullName>FISC_QRTR_NM__c</fullName>
    <label>FISC QRTR NM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>