News UAT/force-app/main/default/objects/FiscalCalendar__mdt/fields/FISC_QRTR_SNAM__c.field-meta.xml
<CustomField>
    <fullName>FISC_QRTR_SNAM__c</fullName>
    <label>FISC QRTR SNAM</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>