News UAT/force-app/main/default/objects/FiscalCalendar__mdt/fields/FISC_WEEK_FIRST_DAY_DT__c.field-meta.xml
<CustomField>
    <fullName>FISC_WEEK_FIRST_DAY_DT__c</fullName>
    <label>FISC WEEK FIRST DAY DT</label>
    <type>Date</type>
</CustomField>