News UAT/force-app/main/default/objects/FiscalCalendar__mdt/fields/FISC_WEEK_ID__c.field-meta.xml
<CustomField>
    <fullName>FISC_WEEK_ID__c</fullName>
    <label>FISC WEEK ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>