News UAT/force-app/main/default/objects/FiscalCalendar__mdt/fields/FISC_WEEK_NR__c.field-meta.xml
<CustomField>
    <fullName>FISC_WEEK_NR__c</fullName>
    <label>FISC WEEK NR</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>