News UAT/force-app/main/default/objects/FiscalCalendar__mdt/fields/FISC_YEAR_ID__c.field-meta.xml
<CustomField>
    <fullName>FISC_YEAR_ID__c</fullName>
    <label>FISC YEAR ID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>