News UAT/force-app/main/default/objects/FiscalCalendar__mdt/fields/FISC_YEAR_LAST_DAY_DT__c.field-meta.xml
<CustomField>
    <fullName>FISC_YEAR_LAST_DAY_DT__c</fullName>
    <label>FISC YEAR LAST DAY DT</label>
    <type>Date</type>
</CustomField>