News UAT/force-app/main/default/objects/FiscalCalendar__mdt/fields/FISC_YEAR_QRTR_DS__c.field-meta.xml
<CustomField>
    <fullName>FISC_YEAR_QRTR_DS__c</fullName>
    <label>FISC YEAR QRTR DS</label>
    <length>7</length>
    <type>Text</type>
</CustomField>